--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "react-testing",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -22,7 +24,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{js,jsx,ts,tsx}' --collectCoverageFrom='!src/components/**/*.{types,stories,constants,test,spec}.{js,jsx,ts,tsx}'"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -41,15 +42,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
-    "jest": {
-      "coverageThreshold" : {
-        "global": {
-          "branches": 80,
-          "functions": 80,
-          "lines": 80,
-          "statements": -10
-        }
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
       }
-    } 
+    }
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/leaflet": "^1.9.2",
+    "jest": "^27.5.1",
+    "react-testing-library": "^8.0.1"
+  }
 }
