--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
@@ -57,9 +56,11 @@
     }
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/leaflet": "^1.9.2",
     "jest": "^27.5.1",
+    "msw": "^1.1.0",
     "react-testing-library": "^8.0.1"
   }
 }
